src/test/ui/const-generics/generic-sum-in-array-length.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/generic-sum-in-array-length.rs:6:53
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {}
   |                                                     ^ cannot perform const operation using `A`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `A`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/generic-sum-in-array-length.rs:6:57
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {}
   |                                                         ^ cannot perform const operation using `B`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `B`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to 2 previous errors

